Bug 335427 - "Activities" applet doesn't trigger activity panel and shows broken popup instead
Summary: "Activities" applet doesn't trigger activity panel and shows broken popup ins...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Activity Switcher sidebar (other bugs)
Version First Reported In: master
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 1.0
Assignee: Bhushan Shah
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-27 17:28 UTC by Elias Probst
Modified: 2014-05-28 10:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot showing broken popup of activities applet (98.89 KB, image/png)
2014-05-27 17:28 UTC, Elias Probst
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2014-05-27 17:28:42 UTC
Created attachment 86863 [details]
Screenshot showing broken popup of activities applet

Clicking on the "Activities" applet doesn't trigger the activity panel or something similar and shows only a broken popup instead.

See attached screenshot.
Comment 1 Bhushan Shah 2014-05-28 04:10:31 UTC
I am the author and one to fix..
Comment 2 Bhushan Shah 2014-05-28 05:34:16 UTC
Alright I fixed showing of popup in plasma-desktop with commit 

http://commits.kde.org/plasma-desktop/e40d47d0d8e9f26b7b432a1e3b7780802b6a238f

and to fix activity manager toggling opened review request.. 

https://git.reviewboard.kde.org/r/118367/
Comment 3 Bhushan Shah 2014-05-28 10:32:15 UTC
Git commit cc3ab5e0f413e4b2ab0fe39e3590024683c8a4b1 by Bhushan Shah.
Committed on 28/05/2014 at 15:58.
Pushed by bshah into branch 'master'.

Export toggleActivityManager method over dbus

This unbreaks the activities dataengine

REVIEW: 118367

M  +3    -3    dataengines/activities/activityjob.cpp
M  +2    -0    shell/dbus/org.kde.PlasmaShell.xml
M  +1    -1    shell/shellcorona.h

http://commits.kde.org/plasma-workspace/cc3ab5e0f413e4b2ab0fe39e3590024683c8a4b1