Export toggleActivityManager method over dbus

This unbreaks the activities dataengine

REVIEW: 118367
BUG: 335427